# TicketSystem

./: .gitignore  CMakeLists.txt  run-test.sh
src/: base.h  code.cpp  code1.cpp  main.cpp  web.cpp
src/terminal/: TicketTerminal.cpp  TicketTerminal.h
src/ticket/: ticket.cpp  ticket.h
src/train/: train.cpp  train.h
src/user/: user.cpp  user.h
utility/bpt/: bpt.h  multibpt.h
utility/bpt/cache/: file.h  memory.h
utility/file/: DataBase.h
utility/stlite/: algorithm.h  list.h  map.h  set.h  unordered_map.h  vector.h
utility/websocket/: WebSocket.cpp  WebSocket.h
web/: components.d.ts  env.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
web/src/: App.vue  keys.ts  main.ts
web/src/assets/: main.css
web/src/components/: iconMove.vue  iconPrice.vue  iconSeat.vue  ticket.vue  user_status.vue
web/src/pages/: add_train.vue  add_user.vue  buy_ticket.vue  login.vue  query_order.vue  query_ticket.vue  query_train.vue  query_user.vue
